more work on alloy smelting, added animated textures for cooking (like the furnace)