@@ -2,19 +2,18 @@ package net.stirdrem.overgeared.compat.emi;
 
 import dev.emi.emi.api.recipe.EmiRecipe;
 import dev.emi.emi.api.recipe.EmiRecipeCategory;
+import dev.emi.emi.api.render.EmiTexture;
 import dev.emi.emi.api.stack.EmiIngredient;
 import dev.emi.emi.api.stack.EmiStack;
 import dev.emi.emi.api.widget.WidgetHolder;
 import net.minecraft.network.chat.Component;
 import net.minecraft.resources.ResourceLocation;
 import net.minecraft.world.item.crafting.RecipeHolder;
-import net.stirdrem.overgeared.OvergearedMod;
 import net.stirdrem.overgeared.recipe.AlloySmeltingRecipe;
 
 import java.util.List;
 
 public class AlloySmeltingEmiRecipe implements EmiRecipe {
-    private static final ResourceLocation TEXTURE = OvergearedMod.loc("textures/gui/brick_alloy_furnace.png");
     
     private final ResourceLocation id;
     private final AlloySmeltingRecipe recipe;
@@ -54,50 +53,53 @@ public class AlloySmeltingEmiRecipe implements EmiRecipe {
 
     @Override
     public int getDisplayWidth() {
-        return 130;
+        return 118;
     }
 
     @Override
     public int getDisplayHeight() {
-        return 60;
+        return 50;
     }
 
     @Override
     public void addWidgets(WidgetHolder widgets) {
-        widgets.addTexture(TEXTURE, 55, 14, 24, 17, 176, 14); // Arrow
-        widgets.addTexture(TEXTURE, 2, 28, 14, 14, 176, 0); // Flame
-
-        // Inputs (2x2 grid logic)
-        // 0: 39, 26 -> 9, 6
-        // 1: 57, 26 -> 27, 6
-        // 2: 39, 44 -> 9, 24
-        // 3: 57, 44 -> 27, 24
+        // Layout: [2x2 Grid] [Arrow] [Output]
+        //                    [Fire]  [XP]
+        // Center the content: total content width ~94, display 118, so padding = 12 per side
+        int offsetX = 12;
+        int offsetY = 6; // Vertical padding
+        int gridX = offsetX;
+        int gridY = offsetY;
         
         int inputCount = inputs.size();
         
-        // Slot 0 (39, 26)
-        if (inputCount > 0) widgets.addSlot(inputs.get(0), 9, 6);
-        else widgets.addSlot(EmiStack.EMPTY, 9, 6);
-
-        // Slot 1 (57, 26)
-        if (inputCount > 1) widgets.addSlot(inputs.get(1), 27, 6);
-        else widgets.addSlot(EmiStack.EMPTY, 27, 6);
-
-        // Slot 2 (39, 44)
-        if (inputCount > 2) widgets.addSlot(inputs.get(2), 9, 24);
-        else widgets.addSlot(EmiStack.EMPTY, 9, 24);
-
-        // Slot 3 (57, 44)
-        if (inputCount > 3) widgets.addSlot(inputs.get(3), 27, 24);
-        else widgets.addSlot(EmiStack.EMPTY, 27, 24);
-
-        // Output (124, 35) -> 94, 15
-        widgets.addSlot(outputs.getFirst(), 94, 15).large(true).recipeContext(this);
+        // 2x2 input grid (36x36)
+        widgets.addSlot(inputCount > 0 ? inputs.get(0) : EmiStack.EMPTY, gridX, gridY);
+        widgets.addSlot(inputCount > 1 ? inputs.get(1) : EmiStack.EMPTY, gridX + 18, gridY);
+        widgets.addSlot(inputCount > 2 ? inputs.get(2) : EmiStack.EMPTY, gridX, gridY + 18);
+        widgets.addSlot(inputCount > 3 ? inputs.get(3) : EmiStack.EMPTY, gridX + 18, gridY + 18);
         
-        // Cooking time text?
+        // Arrow (centered vertically with grid: grid is 36px tall, arrow is 17px, so start at y=9)
+        int arrowX = gridX + 36 + 6;
+        int arrowY = gridY + 1; // Move up to center with grid top half
+        widgets.addTexture(EmiTexture.EMPTY_ARROW, arrowX, arrowY);
+        widgets.addFillingArrow(arrowX, arrowY, recipe.getCookingTime() * 50);
+        
+        // Fire directly under arrow
+        int fireX = arrowX + 5;
+        int fireY = arrowY + 18;
+        widgets.addTexture(EmiTexture.EMPTY_FLAME, fireX, fireY);
+        widgets.addAnimatedTexture(EmiTexture.FULL_FLAME, fireX, fireY, 4000, false, true, true);
+        
+        // Output (large slot, vertically centered with grid)
+        int outputX = arrowX + 28;
+        int outputY = gridY - 1;
+        widgets.addSlot(outputs.getFirst(), outputX, outputY).large(true).recipeContext(this);
+        
+        // XP text under output
         float xp = recipe.getExperience();
         if (xp > 0) {
-            widgets.addText(Component.translatable("emi.cooking.experience", xp), 55, 34, 0xFF808080, false);
+            widgets.addText(Component.translatable("emi.cooking.experience", xp), outputX, outputY + 30, 0xFF808080, false);
         }
     }
 }
